--- a/Portfolio-website/package.json
+++ b/Portfolio-website/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-force-ssl": "^0.3.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6"
   },
